# insurance-policy-api

./: .gitignore  README.md  cdk.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: database.py  main.py
app/api/health/: routes.py
app/api/policy/: crud.py  models.py  routes.py  schemas.py
lib/: insurance-policy-stack.ts
server/: .env  docker-compose.yml
server/api/: Dockerfile
server/db/: init.sql
test/: insurance-policy.test.ts
tests/: test_api_health.py  test_api_policy.py  test_config.py  test_database.py
