[tool.poetry]
name = "tmhcc"
version = "0.1.0"
description = ""
authors = ["Abrar Mudhir <abrarmudhir@outlook.com>"]
readme = "README.md"
packages=[{ include="app"},]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
boto3 = "^1.35.9"
pg8000 = "^1.31.2"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
